# rockyou2024

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_and_test.sh
.devcontainer/: devcontainer.json
.github/: release-drafter.yml
.github/workflows/: ci.yml  cmake-multi-platform.yml  release-notes.yml
fuzzing/: CMakeLists.txt  fuzz_zip_search.cc
include/rockyou/: messages.h  pch.h  print_compat.h  search_engine.h  status.h  terminal_ui.h  zip_reader.h
src/: Search.cc  main.cc  rockyou.error_handling.cppm  rockyou.messages.cppm  rockyou.regex_engine.cppm  rockyou.search_engine.cppm  rockyou.terminal_ui.cppm  rockyou.zip_reader.cppm  search.cpp  search_engine.cc  terminal_ui.cc  zip_reader.cc
tests/: search_engine_test.cc
